<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>3.4.5</version>
		<relativePath/> <!-- lookup parent from repository -->
	</parent>
	<groupId>com.arpay.notifications</groupId>
	<artifactId>arpay-notifications</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<name>arpay-notifications</name>
	<description>Demo project for Spring Boot</description>
	<url/>
	<licenses>
		<license/>
	</licenses>
	<developers>
		<developer/>
	</developers>
	<scm>
		<connection/>
		<developerConnection/>
		<tag/>
		<url/>
	</scm>
	<properties>
		<java.version>21</java.version>
		<lombok.version>1.18.30</lombok.version>
		<jjwt.version>0.12.6</jjwt.version>
				<!-- Transitive dependency overrides for CVE fixes -->
		<!--
		  Spring Framework 6.2.8+
		    fixes CVE-2025-22233 (DataBinder bypass, spring-context)
		    fixes CVE-2025-41234 (RFD via Content-Disposition, spring-web)
		  Unfixable in 6.2.x branch:
		    CVE-2025-41249  (annotation detection, spring-core)           - no patch available
		    CVE-2025-41254  (STOMP CSRF, spring-websocket)                - fixed in 6.2.12 (unreleased)
		    CVE-2026-22735  (SSE stream corruption, webmvc/webflux)       - fixed in 7.0.6 only
		    CVE-2026-22737  (script-view path traversal, webmvc/webflux)  - fixed in 7.0.6 only
		-->
		<spring-framework.version>6.2.8</spring-framework.version>
		<!--
		  Spring Security 6.4.10+
		    fixes CVE-2025-41232 (ASPECTJ private-method auth bypass, CRITICAL)
		    fixes CVE-2025-41248 (annotation detection auth bypass, HIGH)
		  Unfixable: CVE-2026-22732 (HTTP headers not written) - no patch in any branch
		-->
		<spring-security.version>6.4.10</spring-security.version>
		<!--
		  PostgreSQL JDBC 42.7.7+
		    fixes CVE-2025-49146 (channelBinding=require insecure auth fallback, HIGH)
		-->
		<postgresql.version>42.7.7</postgresql.version>
		<!--
		  CVE-2025-22227 (reactor-netty, credential leak on redirect) - fix needs 1.3.0 (Spring Boot 3.5.x)
		  CVE-2026-22731/22733 (actuator, 8.2) - not applicable (no CloudFoundry/VCAP)
		  CVE-2025-7962 (angus-mail) - track for fix
		-->
		<logback.version>1.5.32</logback.version>
		<tomcat.version>10.1.53</tomcat.version>
		<jackson-bom.version>2.18.6</jackson-bom.version>
		<assertj.version>3.27.7</assertj.version>
		<netty.version>4.1.132.Final</netty.version>
	</properties>
	<dependencies>
		<!-- Spring Boot Web -->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web</artifactId>
		</dependency>

		<!-- Spring Data JPA -->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-data-jpa</artifactId>
		</dependency>

		<!-- Spring Security -->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-security</artifactId>
		</dependency>

		<!-- Spring Validation -->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-validation</artifactId>
		</dependency>

		<!-- Spring WebFlux (for WebClient) -->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-webflux</artifactId>
		</dependency>

		<!-- PostgreSQL Driver -->
		<dependency>
			<groupId>org.postgresql</groupId>
			<artifactId>postgresql</artifactId>
			<scope>runtime</scope>
		</dependency>

		<!-- Redis -->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-data-redis</artifactId>
		</dependency>
		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-pool2</artifactId>
		</dependency>

		<!-- Guava for Rate Limiting -->
		<dependency>
			<groupId>com.google.guava</groupId>
			<artifactId>guava</artifactId>
			<version>33.4.0-jre</version>
		</dependency>

		<!-- Firebase Admin SDK -->
		<dependency>
			<groupId>com.google.firebase</groupId>
			<artifactId>firebase-admin</artifactId>
			<version>9.8.0</version>
			<exclusions>
				<exclusion>
					<groupId>commons-logging</groupId>
					<artifactId>commons-logging</artifactId>
				</exclusion>
			</exclusions>
		</dependency>

		<!-- JWT -->
		<dependency>
			<groupId>io.jsonwebtoken</groupId>
			<artifactId>jjwt-api</artifactId>
			<version>${jjwt.version}</version>
		</dependency>
		<dependency>
			<groupId>io.jsonwebtoken</groupId>
			<artifactId>jjwt-impl</artifactId>
			<version>${jjwt.version}</version>
			<scope>runtime</scope>
		</dependency>
		<dependency>
			<groupId>io.jsonwebtoken</groupId>
			<artifactId>jjwt-jackson</artifactId>
			<version>${jjwt.version}</version>
			<scope>runtime</scope>
		</dependency>

		<!-- Lombok -->
		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<optional>true</optional>
		</dependency>

		<!-- Mail -->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-mail</artifactId>
		</dependency>

		<!-- WebSocket -->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-websocket</artifactId>
		</dependency>

		<!-- Spring Boot Configuration Processor
             Generates spring-configuration-metadata.json from @ConfigurationProperties classes
             so IntelliJ resolves custom properties natively (no manual reindex required).
             optional=true means it is NOT included in the final JAR. -->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-configuration-processor</artifactId>
			<optional>true</optional>
		</dependency>

		<!-- Actuator for metrics -->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-actuator</artifactId>
		</dependency>
		<dependency>
			<groupId>io.micrometer</groupId>
			<artifactId>micrometer-registry-prometheus</artifactId>
		</dependency>

		<!-- Test -->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.springframework.security</groupId>
			<artifactId>spring-security-test</artifactId>
			<scope>test</scope>
		</dependency>

		<!-- Logstash JSON encoder — structured logging in production (used by logback-spring.xml) -->
		<dependency>
			<groupId>net.logstash.logback</groupId>
			<artifactId>logstash-logback-encoder</artifactId>
			<version>7.4</version>
		</dependency>
	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<configuration>
					<source>${java.version}</source>
					<target>${java.version}</target>
					<annotationProcessorPaths>
						<path>
							<groupId>org.projectlombok</groupId>
							<artifactId>lombok</artifactId>
							<version>${lombok.version}</version>
						</path>
						<path>
							<groupId>org.springframework.boot</groupId>
							<artifactId>spring-boot-configuration-processor</artifactId>
							<version>${project.parent.version}</version>
						</path>
					</annotationProcessorPaths>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
				<configuration>
					<excludes>
						<exclude>
							<groupId>org.projectlombok</groupId>
							<artifactId>lombok</artifactId>
						</exclude>
					</excludes>
				</configuration>
			</plugin>

			<!-- Spotless: Code formatting enforcement -->
			<plugin>
				<groupId>com.diffplug.spotless</groupId>
				<artifactId>spotless-maven-plugin</artifactId>
				<version>2.43.0</version>
				<configuration>
					<java>
						<removeUnusedImports/>
						<trimTrailingWhitespace/>
						<endWithNewline/>
						<indent>
							<tabs>true</tabs>
							<spacesPerTab>4</spacesPerTab>
						</indent>
					</java>
				</configuration>
			</plugin>

			<!-- PMD: Static code analysis -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-pmd-plugin</artifactId>
				<version>3.26.0</version>
				<configuration>
					<failOnViolation>false</failOnViolation>
					<printFailingErrors>true</printFailingErrors>
				</configuration>
			</plugin>
		</plugins>
	</build>

</project>




